--- a/mobile/iitcm/src/main/res/values/styles.xml
+++ b/mobile/iitcm/src/main/res/values/styles.xml
@@ -5,10 +5,21 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="@style/Theme.AppCompat">
+    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light">
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
+        <item name="colorPrimary">@color/iitc_blue</item>
+        <item name="colorPrimaryDark">@color/iitc_blue</item>
     </style>
+
+    <style name="ToolbarBaseTheme" parent="@style/Theme.AppCompat">
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="colorPrimary">@color/iitc_blue</item>
+        <item name="colorPrimaryDark">@color/iitc_blue</item>
+    </style>
+
+    <color name="iitc_blue">#ff0e3dae</color>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
@@ -23,6 +34,6 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
-    <color name="drawer_background">#99111111</color>
+    <color name="drawer_background">#99ffffff</color>
 
 </resources>
