correct iitc blue color

--- a/mobile/iitcm/src/main/res/layout/activity_share.xml
+++ b/mobile/iitcm/src/main/res/layout/activity_share.xml
@@ -4,4 +4,6 @@
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShareActivity"/>
+    tools:context=".ShareActivity">
+
+</android.support.v4.view.ViewPager>
