--- a/mobile/iitcm/src/main/res/layout/activity_main.xml
+++ b/mobile/iitcm/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,15 +10,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/iitc_toolbar"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:background="?attr/colorPrimary"
-            android:theme="@style/ToolbarBaseTheme"
-            app:popupTheme="@style/AppBaseTheme"
-            android:minHeight="?attr/actionBarSize" />
-
+        <include layout="@layout/toolbar_layout"/>
 
         <com.cradle.iitc_mobile.IITC_WebView
             android:id="@+id/iitc_webview"
