--- a/mobile/iitcm/src/main/res/layout/list_item_narrow.xml
+++ b/mobile/iitcm/src/main/res/layout/list_item_narrow.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/activatedBackgroundIndicator"
+    android:theme="@style/NavDrawerTheme"
     android:drawablePadding="?android:attr/listPreferredItemPaddingLeft"
     android:gravity="center_vertical"
     android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
