--- a/mobile/iitcm/src/main/res/layout/list_item_selectable.xml
+++ b/mobile/iitcm/src/main/res/layout/list_item_selectable.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="?android:attr/listPreferredItemHeightSmall"
     android:background="?android:attr/activatedBackgroundIndicator"
+    android:theme="@style/NavDrawerTheme"
     android:drawablePadding="?android:attr/listPreferredItemPaddingLeft"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
