--- a/mobile/iitcm/src/main/res/layout/view_log_msg.xml
+++ b/mobile/iitcm/src/main/res/layout/view_log_msg.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@color/iitc_blue"
     tools:ignore="HardcodedText">
 
     <LinearLayout
@@ -15,7 +16,7 @@
             android:id="@+id/log_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_about_dark"
+            android:src="@drawable/ic_action_about"
             tools:ignore="ContentDescription"/>
 
         <TextView
@@ -26,6 +27,7 @@
             android:layout_weight="1"
             android:gravity="center_vertical|left"
             android:text="iitcm"
+            android:textColor="@color/abc_primary_text_material_dark"
             android:textAppearance="?android:attr/textAppearance"
             android:typeface="monospace"/>
 
@@ -36,6 +38,7 @@
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical|right"
             android:text="13:37:42.000"
+            android:textColor="@color/abc_primary_text_material_dark"
             android:textAppearance="?android:attr/textAppearance"/>
     </LinearLayout>
 
@@ -44,6 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="iitcm://script/total-conversion-build.user.js:1337: Some random message"
+        android:textColor="@color/abc_primary_text_material_dark"
         android:typeface="monospace"/>
 
 </LinearLayout>
