--- a/mobile/iitcm/src/main/res/layout/map_options_header.xml
+++ b/mobile/iitcm/src/main/res/layout/map_options_header.xml
@@ -9,6 +9,7 @@
         style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/abc_primary_text_material_dark"
         android:labelFor="@+id/spinnerHighlighter"
         android:paddingLeft="5dip"
         android:text="@string/label_highlighter"/>
@@ -16,6 +17,8 @@
     <Spinner
         android:id="@+id/spinnerHighlighter"
         android:theme="@style/NavDrawerTheme"
+        android:textColor="@color/abc_primary_text_material_dark"
+        android:popupBackground="@color/iitc_blue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
@@ -23,6 +26,7 @@
         style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/abc_primary_text_material_dark"
         android:labelFor="@+id/spinnerBaseLayer"
         android:paddingLeft="5dip"
         android:text="@string/label_base_layer"/>
@@ -30,6 +34,8 @@
     <Spinner
         android:id="@+id/spinnerBaseLayer"
         android:theme="@style/NavDrawerTheme"
+        android:textColor="@color/abc_primary_text_material_dark"
+        android:popupBackground="@color/iitc_blue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
@@ -37,6 +43,7 @@
         style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/abc_primary_text_material_dark"
         android:paddingLeft="5dip"
         android:text="@string/label_overlay_layers"/>
 
