--- a/mobile/iitcm/src/main/res/layout/list_item_narrow.xml
+++ b/mobile/iitcm/src/main/res/layout/list_item_narrow.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:background="?android:attr/activatedBackgroundIndicator"
     android:theme="@style/NavDrawerTheme"
+    android:textColor="@color/abc_primary_text_material_dark"
     android:drawablePadding="?android:attr/listPreferredItemPaddingLeft"
     android:gravity="center_vertical"
     android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
