--- a/style.css
+++ b/style.css
@@ -228,7 +228,6 @@ a:hover {
   left: 0;
   z-index: 3000;
   background: rgba(8, 48, 78, 0.9);
-  font-size: 12.6px;
   line-height: 15px;
   color: #eee;
   border: 1px solid #20A8B1;
@@ -263,7 +262,7 @@ em {
 #chat table, #chatinput table {
   width: 100%;
   table-layout: fixed;
-  border-spacing: 0m;
+  border-spacing: 0;
   border-collapse: collapse;
 }
 
@@ -272,7 +271,7 @@ em {
 }
 
 #chat td, #chatinput td {
-  font-size: 12.6px;
+  font-size: 13px;
   vertical-align: top;
   padding-bottom: 3px;
 }
@@ -348,7 +347,6 @@ summary {
 
 #chatinput input {
   background: transparent;
-  font-size: 12.6px;
   color: #EEEEEE;
   width: 100%;
   height: 100%;
@@ -967,7 +965,6 @@ td + td {
   color: #ffd652;
   display: inline-block;
   float: left;
-  font-size: 12px;
   height: 18px;
   text-align: center;
 }
