--- a/style.css
+++ b/style.css
@@ -540,6 +540,12 @@ input[type="search"], input[type="url"] {
 #searchwrapper li {
   cursor: pointer;
 }
+#searchwrapper li a {
+  margin-left: -14px;
+  padding-left: 14px;
+  background-position: 1px center;
+  background-repeat: no-repeat;
+}
 #searchwrapper li em {
   color: #ccc;
   font-size: 0.9em;
