--- a/style.css
+++ b/style.css
@@ -550,6 +550,9 @@ input[type="search"], input[type="url"] {
   background-position: 1px center;
   background-repeat: no-repeat;
 }
+#searchwrapper li:focus a, #searchwrapper li:hover a {
+  text-decoration: underline;
+}
 #searchwrapper li em {
   color: #ccc;
   font-size: 0.9em;
