[bookmarks-by-zaso] make bookmarks searchable

--- a/plugins/bookmarks-by-zaso.css
+++ b/plugins/bookmarks-by-zaso.css
@@ -283,7 +283,7 @@
 	cursor:pointer;
 }
 #bkmrksTrigger, .bkmrksStar span, .portal-list-bookmark span {
-	background-image:url(@@INCLUDEIMAGE:plugins/bookmarks-img.png@@);
+	background-image:url(@@INCLUDEIMAGE:images/bookmarks-img.png@@);
 }
 .bkmrksStar span{
 	display:inline-block;
