--- a/style.css
+++ b/style.css
@@ -549,6 +549,7 @@ input[type="search"], input[type="url"] {
   padding-left: 14px;
   background-position: 1px center;
   background-repeat: no-repeat;
+  background-size: 12px 12px;
 }
 #searchwrapper li:focus a, #searchwrapper li:hover a {
   text-decoration: underline;
