[distance-to-portal] add vendor-prefixes to transformations and implement updating the distance without re-rendering all portal details
Firefox supports 'transform' without prefix, but Android still requires '-webkit-'. To be sure, include properties with '-moz-', '-webkit-' and without prefix.

--- a/plugins/distance-to-portal.css
+++ b/plugins/distance-to-portal.css
@@ -19,10 +19,14 @@
 	top: 0.15em;
 	left: 0.15em;
 	transform: skewY(-30deg);
+	-moz-transform: skewY(-30deg);
+	-webkit-transform: skewY(-30deg);
 }
 #portal-distance-bearing:after {
 	left: auto;
 	right: 0.15em;
 	transform: scaleX(-1) skewY(-30deg);
+	-moz-transform: scaleX(-1) skewY(-30deg);
+	-webkit-transform: scaleX(-1) skewY(-30deg);
 }
 
