--- a/plugins/missions.css
+++ b/plugins/missions.css
@@ -31,7 +31,7 @@
 	cursor: pointer;
 	width: 50px;
 	margin-right: 10px;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 }
 
 .plugin-mission-summary > a, .plugin-mission-summary > h4 {
@@ -76,7 +76,7 @@
 .plugin-mission-details ol {
 	clear: left;
 	list-style: none;
-	margin: 0;
+	margin: 10px 0 0;
 	padding: 0;
 }
 
