[show-linked-portals] Also show link length in box along with "portal out of range"

--- a/plugins/show-linked-portals.css
+++ b/plugins/show-linked-portals.css
@@ -25,6 +25,8 @@
 	height: 40px;
 }
 .showLinkedPortalLink.outOfRange span {
+	display: block;
+	line-height: 13px;
 	font-size: 10px;
 }
 .showLinkedPortalOverflow {
