Add subtle highlight of row belonging to portal being updated

--- a/plugins/portal-ownership.css
+++ b/plugins/portal-ownership.css
@@ -127,6 +127,10 @@ td.portal-list-ownership {
   background-color: #000;
 }
 
+#ownershiplist table tr.updating {
+  border: 1px solid #FFCE00;
+}
+
 #ownershiplist .information {
   margin-top: 10px;
   font-size: 10px;
