[missions] fix: handle unavailable waypoints correctly

--- a/plugins/missions.css
+++ b/plugins/missions.css
@@ -132,6 +132,9 @@
 	width: 8px;
 }
 
+.plugin-mission-waypoint.unavailable {
+	text-decoration: line-through;
+}
 .plugin-mission-waypoint .title {
 	font-size: 18px;
 	font-weight: bold;
