--- a/plugins/missions.css
+++ b/plugins/missions.css
@@ -1,3 +1,14 @@
+.plugin-mission-pane {
+	background: transparent;
+	border: 0 none !important;
+	height: 100% !important;
+	width: 100% !important;
+	left: 0 !important;
+	top: 0 !important;
+	position: absolute;
+	overflow: auto;
+}
+
 .plugin-mission-summary {
 	padding: 5px;
 	border-top: black solid 1px;
