--- a/style.css
+++ b/style.css
@@ -1229,3 +1229,57 @@ g.checkpoint:hover circle {
 	width: 100%;
 }
 
+/* tabs */
+.ui-tabs-nav {
+	display: block;
+	border-bottom: 1px solid #20a8b1;
+	border-top: 1px solid transparent;
+	margin: 3px 0 0;
+	padding: 0;
+}
+.ui-tabs-nav::after {
+	content: '';
+	clear: left;
+	display: block;
+	height: 0;
+	width: 0;
+}
+.ui-tabs-nav li {
+	list-style: none;
+	display: block;
+	float:left;
+	margin: 0 0 -1px;
+	border: 1px solid #20a8b1;
+}
+.ui-tabs-nav li.ui-tabs-active {
+	border-bottom-color: #0F2C3F;
+	background: #0F2C3F;
+	border-width: 2px 2px 1px;
+	font-weight: bold;
+	margin: -1px 1px;
+}
+.ui-tabs-nav a {
+	display: inline-block;
+	padding: 0.2em 0.7em;
+}
+.ui-tabs-nav .ui-icon {
+	display: inline-block;
+	font-size: 0;
+	height: 22px;
+	overflow: hidden;
+	position: relative;
+	vertical-align: top;
+	width: 16px;
+}
+.ui-tabs-nav .ui-icon-close::before {
+	content: "×";
+	font-size: 16px;
+	height: 16px;
+	position: absolute;
+	text-align: center;
+	top: 2px;
+	vertical-align: baseline;
+	width: 16px;
+	cursor: pointer;
+}
+
