[missions] add "zoom to mission" button on mobile and make the "missions in view" button a bit larger

--- a/plugins/missions.css
+++ b/plugins/missions.css
@@ -8,6 +8,9 @@
 	position: absolute;
 	overflow: auto;
 }
+.plugin-mission-pane > button {
+	padding: 0.3em 2em;
+}
 
 .plugin-mission-summary {
 	padding: 5px;
